Encapsulate everything in ResultHexes class

--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
 		<script src="lib/OBJLoader.js"></script>
 
 		<script src="js/hexagons.js"></script>
+		<script src="js/ResultHexes.js"></script>
 		<script src="js/main.js"></script>
 	</body>
 </html>
