Remove unnecessary wrapper class

--- a/index.html
+++ b/index.html
@@ -16,7 +16,9 @@
 		</style>
 	</head>
 	<body>
-		<div id="canvasContainer"></div> <!- Canvas is appended here -->
+		<div id="canvasContainer">
+			<canvas id="hexCanvas"></canvas>
+		</div>
 		<script src="lib/three.min.js"></script>
 		<script src="lib/OBJLoader.js"></script>
 
