Rename hexagons.js to ResultHexagons.js and ensure no memory leaks

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 		<script src="lib/three.min.js"></script>
 		<script src="lib/OBJLoader.js"></script>
 
-		<script src="js/hexagons.js"></script>
+		<script src="js/ResultHexagons.js"></script>
 		<script src="js/main.js"></script>
 	</body>
 </html>
