Use a threeplusobjloader.min.js

--- a/index.html
+++ b/index.html
@@ -19,8 +19,7 @@
 		<div id="canvasContainer">
 			<canvas id="hexCanvas"></canvas>
 		</div>
-		<script src="lib/three.min.js"></script>
-		<script src="lib/OBJLoader.js"></script>
+		<script src="lib/threeplusobjloader.min.js"></script>
 
 		<script src="js/ResultHexagons.js"></script>
 		<script src="js/main.js"></script>
